# DAMSA-simulation

./: .gitignore  CMakeLists.txt  DAMSAAnalysis.cpp  DAMSAAnalysis.hpp  DAMSADetectorConstruction.cpp  DAMSADetectorConstruction.hpp  DAMSAPrimaryGeneratorAction.cpp  DAMSAPrimaryGeneratorAction.hpp  DAMSASensitiveDetector.cpp  DAMSASensitiveDetector.hpp  DAMSASteppingAction.cpp  DAMSASteppingAction.hpp  README.md  analyze_gap_scan.py  damsa_background_analysis.cpp  damsa_energy_angular_distributions.cpp  damsa_energy_scan.cpp  damsa_gap_scan.cpp  damsa_gap_scan_auto.cpp  damsa_sim.cpp  damsa_tof_analysis.cpp  gap_scan_results.txt  plot_tof.py  vis.mac
